--- a/nyc_restaurant_exploration.Rmd
+++ b/nyc_restaurant_exploration.Rmd
@@ -10,7 +10,7 @@ params:
   last_inspection: last_inspection,
   nb_restaurants: nb_restaurants
   nb_cuisine_types: nb_cuisine_types
-  rest_count_by_cuisine: rest_count_by_cuisine
+  rest_by_cuisine_and_prob_grade_A_only: rest_by_cuisine_and_prob_grade_A_only
   grade_count: grade_count
   a_grade_percent: a_grade_percent
   inspections_by_month_plot: inspections_by_month_plot
@@ -24,7 +24,7 @@ pacman::p_load(htmlTable)
 
 # Exploring the NYC Restaurant Inspection Results Dataset
 
-#### Intro
+### Intro
 
 The `DOHMH New York City Restaurant Inspection Results` dataset provides
 information on restaurant violations and grades following city inspections. This
@@ -37,45 +37,46 @@ and C for scores above 28.
 
 ---
 
-#### Inspections per Month
+### Inspections per Month
 
 ##### How many inspections are carried out each month?
 ```{r echo=FALSE}
 params$inspections_by_month_plot
 ```
 
-Although inspection dates start in 2011, the majority of inspections appear
-to occur from 2015 onwards. From this point onwards, the number of inspections
-varies roughly between 7500 and just over 10000 each month.
+Although the first recorded inspection dates starts in 2011, the majority of inspections appear from 2015 onwards (maybe because inspection data wasn't recorded at the time?). From 2015 onwards, the number of inspections varies roughly between 7500 and just over 10000 each month.
 
 ##### Do there appear to be any seasonal trends?
 ```{r echo=FALSE}
 plot(params$fit_inspections)
 ```
 
-Inspections appear to increase slightly at the beginning of the year (~ February ),
-and dip around the end of the year (~ November ).
+For 2015 to 2017, inspections seem to increase slightly at the beginning of the year (~ February ), and dip around the end of the year (~ November ).
 
 ---
 
-#### Inspection Results
+### Inspection Results
 
 ##### How many inspections resulted in grades A, B and C?
 
 ```{r echo=FALSE}
 htmlTable::htmlTable(params$grade_count,
-                     css.cell = "padding-left: 2em; padding-right: 2em;")
+                     css.cell = "padding-left: 2em; padding-right: 2em; padding-top: .6em; padding-bottom: .6em;")
 ```
 
----
+The vast majority of inspections result in grade A.
 
-##### How many restaurants were inspected of each cuisine type?
+##### How many restaurants were inspected of each cuisine type? What is the probability that a restaurant only received grade A?
 
 ```{r echo=FALSE}
-datatable(params$rest_count_by_cuisine, options = list(pageLength = 6))
+datatable(params$rest_by_cuisine_and_prob_grade_A_only, options = list(pageLength = 6))
 ```
 
+##### Is there any association between borough and average (median) violation score?
 
+##### Is there any association between cuisine type and average (median) violation score?
+
+##### Are $$$ amount, 
 
 ---
   
